fix: stats icon alignment in data table and move sprites data to constants

--- a/src/app/builds/[hashId]/page.module.css
+++ b/src/app/builds/[hashId]/page.module.css
@@ -1,3 +1,7 @@
+.statIcon {
+  object-fit: scale-down;
+}
+
 .buildDescriptionContainer {
   flex: 1;
 }
