--- a/src/components/builds/traveler-select.module.css
+++ b/src/components/builds/traveler-select.module.css
@@ -1,3 +1,7 @@
+.statIcon {
+  object-fit: scale-down;
+}
+
 .radioCardItem {
   justify-content: flex-start;
 }
